@startuml

class Task {
    -title: String
    -description: String
    -backgroundColor: Color
    -location: Point
    +Task(title: String, description: String)
    +createTaskPanel(taskMenu: ContextMenuStrip): Panel
}

class Section {
    -name: String
    -tasks: List<Task>
    +Section(name: String)
    +addTask(task: Task): void
    +removeTask(task: Task): void
    +repositionTasks(): void
}

class Point {
    -x: int
    -y: int
    +Point(x: int, y: int)
}

class ContextMenuStrip {
    +show(): void
}

Task "1" -- "0..*" Section : contains
Section "1" -- "0..*" Task : has

@enduml
